--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "angular-highcharts": "^13.0.1",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.0",
+    "highcharts": "^9.3.3",
+    "highcharts-angular": "^3.0.0",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
